@@ -1,3 +1,4 @@
+2024-10-29: Update github actions
 2024-10-29: Fix CMake build, closes #49
 2024-07-04: Minor rewording in man page
 2024-06-17: Fix typo
